Fixed spacing between paragraphs.

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -16,3 +16,6 @@ body {
       max-width: 100%;
       height: auto;
   }
+  a{
+      color: $mainOrange;
+  }
