--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,6 +10,10 @@
         padding-right: 3em;
     }
 
+    &__b-margin-until-medium{
+        margin-bottom: 1rem;
+    }
+
     @mixin atMedium{
 
         &__medium-4{
